--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0" />
     <script type="text/javascript" src="assets/js/jquery-3.7.1.min.js" id="jquery-js"></script>
     <link rel='stylesheet' id='nate-style-css' href='assets/css/sosb.css' type='text/css' media='all' />
